# ocaml-fsrs

./: .gitignore  LICENSE  README.md  dune-project  justfile  ocaml-fsrs.opam
demo/: demo.ml  dune
fsrs_ocaml/: dune-project
fsrs_ocaml/lib/: dune
fsrs_ocaml/test/: dune
ocaml-fsrs/: dune-project
ocaml-fsrs/src/: dune  fsrs.ml  fsrs.mli  models.ml  models.mli  parameters.ml  parameters.mli  scheduler.ml  scheduler.mli  scheduler_basic.ml  utils.ml  utils.mli
ocaml-fsrs/test/: dune
src/: alea.ml  dune  fsrs.ml  models.ml  models.mli  parameters.ml  parameters.mli  scheduler.ml  scheduler.mli  scheduler_basic.ml  scheduler_longterm.ml  scheduler_longterm.mli  utils.mli
test/: dune  test_fsrs.ml
