(lang dune 3.17)

(name ocaml-fsrs)

(generate_opam_files true)

(source
 (github chaosarium/ocaml-fsrs))

(authors "Lómenoirë Mortecc. <chaosarium@duck.com>")

(maintainers "Lómenoirë Mortecc. <chaosarium@duck.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml-fsrs)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
